# ffmpeg

./: README.md
app/: CMakeLists.txt  build.gradle  proguard-rules.pro
app/src/androidTest/java/com/example/sail/ffmpegdemo/: ExampleInstrumentedTest.java
app/src/main/: AndroidManifest.xml
app/src/main/cpp/: decode_video.c  native-lib.cpp
app/src/main/cpp/include/: decode_video.h
app/src/main/java/com/example/sail/ffmpegdemo/: AideoUtils.java  MainActivity.java  VideoUtils.java
app/src/main/res/layout/: activity_main.xml
app/src/test/java/com/example/sail/ffmpegdemo/: ExampleUnitTest.java
gradle/wrapper/: gradle-wrapper.properties
